# terrascope-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py  002_add_indexes_and_constraints.py
docs/: assignment.md  plan.md  technical_report.md
infra/compose/: compose.postgres.yml  compose.temporal.yml  compose.yml
src/app/: config.py  dependencies.py  main.py
src/app/routers/: users.py
src/app/services/: user.py
tests/: conftest.py  test_users.py
tests/api/: test_api_health.py  test_api_imagery.py  test_api_processing.py  test_api_results.py
tests/cli/: test_cli.py
tests/core/: test_detector.py  test_evaluator.py  test_exporter.py  test_imagery.py  test_indicators.py  test_models.py  test_postprocessor.py  test_schemas.py  test_tiler.py
tests/core/detection/: test_composite.py  test_factory.py  test_filter.py  test_renderer.py  test_segformer_landscape.py
tests/integration/: test_pipeline.py
tests/worker/: test_activities.py
