[project]
name = "terrascope"
version = "0.1.0"
description = "Satellite imagery analysis: object detection and GIS layer generation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.1",
    "pytest-asyncio>=1.0",
    "httpx>=0.28",
    "alembic>=1.15",
    "terrascope-core",
    "terrascope-api",
    "terrascope-worker",
    "terrascope-cli",
    "python-dotenv>=1.2.2",
    "greenlet>=3.0.3",
]

[tool.uv.sources]
terrascope-core = { workspace = true }
terrascope-api = { workspace = true }
terrascope-worker = { workspace = true }
terrascope-cli = { workspace = true }

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["packages/core/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
